fix jumpy css transition on menu toggle

--- a/css/blog.css
+++ b/css/blog.css
@@ -49,6 +49,7 @@ header #subheading {
 #menu-toggle i {
   display: block;
   position: relative;
+  top: 0;
   height: 2px;
   margin-bottom: 6px;
   background: rgba(255,255,255,0.5);
